# Advanced-Thread-Pool-and-TestShell

./: .gitignore
manual/: AdvThreadPool_desription.docx
src/: CMakeLists.txt  project_all_qmake.pro
src/AdvThreadPool/: AdvMacros.h  AdvPoolEmitter.h  AdvPoolGUI.cpp  AdvPoolGUI.h  AdvThread.cpp  AdvThread.h  AdvThreadPool.cpp  AdvThreadPool.h  AdvThreadPool.pro  CMakeLists.txt  CheckCoreWidget.cpp  CheckCoreWidget.h  DllHeader.h  DllSource.cpp  QObjectSerializer.cpp  QObjectSerializer.h  Runnable.h  ServiceStructures.h  ThreadPoolSettings.cpp  ThreadPoolSettings.h  WarningJournal.cpp  WarningJournal.h  images.qrc
src/AdvThreadPool/forms/: threadpoolshell.ui
src/AdvThreadPool/images/: message.xpm  warning.xpm
src/TestShell/: CMakeLists.txt  TaskContainer.cpp  TaskContainer.h  TestShell.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
